added the product details in user side

--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -35,6 +35,11 @@
                           </div>
 
                         </div>
+                        <div class="col-6  text-dark">
+                          <label for="exampleInputName1" class="font-weight-bold pl-3" style="color: #ffffff;">Brand</label>
+                          <input type="text" class="form-control  " name="brand" id="exampleInputName1"
+                            placeholder="brand"  style="background-color: rgb(13, 30, 59);padding-left: 15px;" required>
+                        </div>
                         <div class="row">
                           <div class="col-md-6">
                             <div class="form-group row">
