--- a/views/admin/Products.ejs
+++ b/views/admin/Products.ejs
@@ -2,15 +2,15 @@
 <%- include("../admin/layouts/adminHeader.ejs") %>
 
 
-<body class="g-sidenav-show  bg-gray-200">
+<body class="g-sidenav-show bg-gray-200">
   <%- include("../admin/layouts/adminSideBar.ejs") %>
-    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
+    <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
       <!-- Navbar -->
       <%- include("../admin/layouts/adminNavBar.ejs") %>
       <!-- End Navbar -->
       <div class="container-fluid py-4">
         <div class="row">
-          <div class="col-12 , elemDesign">
+          <div class="col-12 col-md-8 col-lg-9 elemDesign" style=" width: 1320px;">
             <div class="card my-4">
               <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 elemDesign2">
                 <div class="bg-gradient-primary shadow-primary border-radius-lg pt-4 pb-3">
@@ -23,10 +23,10 @@
               <div class="card-body px-0 pb-2">
                 <div class="table-responsive p-0">
                   <table class="table table-dark">
-                    <input type="hidden" name="id" value="<%=product._id%>">
                     <thead>
                       <tr>
                         <th class="text-center">Image</th>
+                        <th class="text-center">Brand</th>
                         <th class="text-center">Product Name</th>
                         <th class="text-center">Category</th>
                         <th class="text-center">Price</th>
@@ -41,8 +41,10 @@
                       <% for (let i = 0; i < product.length; i++) { %>
                         <tr>
                           <td class="text-center">
-                            <img style="height: 70px; width: 70px ; border-radius: 0%;"
-                            src="/static/adminAssets/images/<%= product[i].image[0] %>" alt="">
+                            <img class="img-fluid" src="/static/adminAssets/images/<%= product[i].image[0] %>" alt="">
+                          </td>
+                          <td style="color: aliceblue;" class="text-center">
+                            <%= product[i].brand %>
                           </td>
                           <td style="color: aliceblue;" class="text-center">
                             <%= product[i].productName %>
@@ -62,15 +64,15 @@
                           <td style="color: aliceblue;" class="text-center">
                             <%= product[i].status %>
                           </td>
-                          <td><a href= "/admin/editProduct?id=<%= product[i]._id%>"><button type="button" class="btn btn-primary btn-sm" style="color: rgb(255, 255, 255);">Edit</button></a></td>
+                          <td><a href="/admin/editProduct?id=<%= product[i]._id%>"><button type="button" class="btn btn-primary btn-sm" style="color: rgb(255, 255, 255);">Edit</button></a></td>
                           <td>
                            <% if( product[i].is_active === true){ %>
                              <a href="/admin/is_activeProduct?id=<%= product[i]._id %>">
                            <button type="button" class="btn btn-success btn-md">List</button></a>
-                             <% }else{ %>
+                             <% } else { %>
                                <a href="/admin/is_activeProduct?id=<%= product[i]._id %>">
                                  <button type="button" class="btn btn-outline-secondary btn-md">Unlist</button></a>
-                               <%}%>
+                               <% } %>
                           </td>
                         </tr>
                       <% } %>
@@ -80,10 +82,11 @@
               </div>
             </div>
           </div>
+          <div class="col-12 col-md-4 col-lg-3 elemDesign">
+            <!-- Sidebar content for medium and large screens -->
+          </div>
         </div>
       </div>
-      
-    </main>
     </main>
 
     <%- include("../admin/layouts/adminFooter.ejs") %>
