--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -36,6 +36,11 @@
                         placeholder="price" value="<%=product.price%>" style="background-color: rgb(13, 30, 59);" required>
                     </div>
                   </div>
+                  <div class="col-6">
+                    <label for="exampleInputName1" class="font-weight-bold pl-3" style="color: #ffffff;">brand</label>
+                    <input type="text" class="form-control text-white" id="exampleInputName1" name="brand"
+                      placeholder="brand" value="<%=product.brand %>" style="background-color: rgb(13, 30, 59);" required>
+                  </div>
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group row">
@@ -71,7 +76,7 @@
                   </div>
                   <div class="form-group mt-2">
                     <label for="exampleTextarea1" class="font-weight-bold pl-3 " style="color: #ffffff;">Description</label>
-                    <textarea name="description" class="form-control text-white " id="exampleTextarea1" rows="4" style="background-color: rgb(13, 30, 59);" required></textarea>
+                    <textarea name="description" class="form-control text-white " id="exampleTextarea1" rows="4" style="background-color: rgb(13, 30, 59);" value="<%=product.description%>" required></textarea>
                   </div>
                   <div class="rounded product-img-preview">
                     <!-- <label class="col-sm-3 col-form-label">Images</label> -->
