--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -34,19 +34,45 @@
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/static/userAssets/css/main.css">
 <!--===============================================================================================-->
+
+
+
+
 </head>
 <body class="animsition">
 	
-	<!-- Header -->
-	<header class="header-v3">
+	<header class="header-v4">
 		<!-- Header desktop -->
-		<div class="container-menu-desktop trans-03 ">
-			<div class="wrap-menu-desktop">
-				<nav class="limiter-menu-desktop p-l-45">
+		<div class="container-menu-desktop">
+			<!-- Topbar -->
+			<div class="top-bar">
+				<div class="content-topbar flex-sb-m h-full container">
+					<div class="left-top-bar">
+						Free shipping for standard order over $100
+					</div>
+
+					<div class="right-top-bar flex-w h-full">
+						<a href="#" class="flex-c-m trans-04 p-lr-25">
+							Help 
+						</a>
+
+						<a href="#" class="flex-c-m trans-04 p-lr-25">
+							My Account
+						</a>
+
+						
+
+						
+					</div>
+				</div>
+			</div>
+
+			<div class="wrap-menu-desktop how-shadow1">
+				<nav class="limiter-menu-desktop container">
 					
 					<!-- Logo desktop -->		
 					<a href="#" class="logo">
-						<img src="/static/userAssets/images/icons/logo-02.png" alt="IMG-LOGO">
+						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
@@ -62,11 +88,11 @@
 							</li>
 
 							<li class="label1" data-label1="hot">
-								<a href="shoping-cart.html">Features</a>
+								<a href="">Features</a>
 							</li>
 
 							<li>
-								<a href="blog.html">Blog</a>
+								<a href="">Blog</a>
 							</li>
 
 							<li>
@@ -80,247 +106,216 @@
 					</div>	
 
 					<!-- Icon header -->
-					<div class="wrap-icon-header flex-w flex-r-m h-full">							
-						<div class="flex-c-m h-full p-r-25 bor6">
-							<div class="icon-header-item cl0 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="2">
-								<i class="zmdi zmdi-shopping-cart"></i>
-							</div>
+					<div class="wrap-icon-header flex-w flex-r-m">
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
+							<i class="zmdi zmdi-search"></i>
 						</div>
-							
-						<div class="flex-c-m h-full p-lr-19">
-							<div class="icon-header-item cl0 hov-cl1 trans-04 p-lr-11 js-show-sidebar">
-								<P>USER ACC</P>
-							</div>
+
+						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="2">
+							<i class="zmdi zmdi-shopping-cart"></i>
 						</div>
+
+						<a href="#" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
+							<i class="zmdi zmdi-favorite-outline"></i>
+						</a>
 					</div>
 				</nav>
 			</div>	
 		</div>
 
 		<!-- Header Mobile -->
-<div class="wrap-header-mobile">
-    <!-- Logo moblie -->		
-    <div class="logo-mobile">
-        <a href="index.html"><img src="/static/userAssets/images/icons/logo-01.png" alt="IMG-LOGO"></a>
-    </div>
+		<div class="wrap-header-mobile">
+			<!-- Logo moblie -->		
+			<div class="logo-mobile">
+				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+			</div>
 
-    <!-- Icon header -->
-    <div class="wrap-icon-header flex-w flex-r-m h-full m-r-15">
-        <div class="flex-c-m h-full p-r-5">
-            <div class="icon-header-item cl2 hov-cl1 trans-04 p-lr-11 icon-header-noti js-show-cart" data-notify="2">
-                <i class="zmdi zmdi-shopping-cart"></i>
-            </div>
-        </div>
-    </div>
+			<!-- Icon header -->
+			<div class="wrap-icon-header flex-w flex-r-m m-r-15">
+				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
+					<i class="zmdi zmdi-search"></i>
+				</div>
 
-    <!-- Button show menu -->
-    <div class="btn-show-menu-mobile hamburger hamburger--squeeze">
-        <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-        </span>
-    </div>
-</div>
+				<div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
+					<i class="zmdi zmdi-shopping-cart"></i>
+				</div>
 
+				<a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
+					<i class="zmdi zmdi-favorite-outline"></i>
+				</a>
+			</div>
 
-<!-- Menu Mobile -->
-<div class="menu-mobile">
-    <ul class="main-menu-m">
-        <li>
-            <a href="">Home</a>
-           
-        </li>
-
-        <li>
-            <a href="">Shop</a>
-        </li>
-
-        <li>
-            <a href="" class="label1 rs1" data-label1="hot">Features</a>
-        </li>
-
-        <li>
-            <a href="">Blog</a>
-        </li>
-
-        <li>
-            <a href="">About</a>
-        </li>
-
-        <li>
-            <a href="">Contact</a>
-        </li>
-    </ul>
-</div>
-
-<!-- Modal Search -->
-<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
-    <button class="flex-c-m btn-hide-modal-search trans-04">
-        <i class="zmdi zmdi-close"></i>
-    </button>
-
-    <form class="container-search-header">
-        <div class="wrap-search-header">
-            <input class="plh0" type="text" name="search" placeholder="Search...">
-
-            <button class="flex-c-m trans-04">
-                <i class="zmdi zmdi-search"></i>
-            </button>
-        </div>
-    </form>
-</div>
-</header>
+			<!-- Button show menu -->
+			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
+				<span class="hamburger-box">
+					<span class="hamburger-inner"></span>
+				</span>
+			</div>
+		</div>
 
 
-<!-- Sidebar -->
-<aside class="wrap-sidebar js-sidebar">
-<div class="s-full js-hide-sidebar"></div>
+		<!-- Menu Mobile -->
+		<div class="menu-mobile">
+			<ul class="topbar-mobile">
+				<li>
+					<div class="left-top-bar">
+						Free shipping for standard order over $100
+					</div>
+				</li>
 
-<div class="sidebar flex-col-l p-t-22 p-b-25">
-    <div class="flex-r w-full p-b-30 p-r-27">
-        <div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-sidebar">
-            <i class="zmdi zmdi-close"></i>
-        </div>
-    </div>
+				<li>
+					<div class="right-top-bar flex-w h-full">
+						<a href="#" class="flex-c-m p-lr-10 trans-04">
+							Help & FAQs
+						</a>
 
-    <div class="sidebar-content flex-w w-full p-lr-65 js-pscroll">
-        <ul class="sidebar-link w-full">
-            <li class="p-b-13">
-                <a href="" class="stext-102 cl2 hov-cl1 trans-04">
-                    Home
-                </a>
-            </li>
+						<a href="#" class="flex-c-m p-lr-10 trans-04">
+							My Account
+						</a>
 
-            <li class="p-b-13">
-                <a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-                    My Wishlist
-                </a>
-            </li>
+						<a href="#" class="flex-c-m p-lr-10 trans-04">
+							EN
+						</a>
 
-            <li class="p-b-13">
-                <a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-                    My Account
-                </a>
-            </li>
+						<a href="#" class="flex-c-m p-lr-10 trans-04">
+							USD
+						</a>
+					</div>
+				</li>
+			</ul>
 
-            <li class="p-b-13">
-                <a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-                    Track Oder
-                </a>
-            </li>
+			<ul class="main-menu-m">
+				<li>
+					<a href="/">Home</a>
+					
+					<span class="arrow-main-menu-m">
+						<i class="fa fa-angle-right" aria-hidden="true"></i>
+					</span>
+				</li>
 
-            <li class="p-b-13">
-                <a href="#" class="stext-102 cl2 hov-cl1 trans-04">
-                    Refunds
-                </a>
-            </li>
+				<li>
+					<a href="/shop">Shop</a>
+				</li>
 
-            <li class="p-b-13">
-                <a href="/logout" class="stext-102 cl2 hov-cl1 trans-04">
-                    SIGNUP/SIGNIN
-                </a>
-            </li>
-        </ul>
+				<li>
+					<a href="" class="label1 rs1" data-label1="hot">Features</a>
+				</li>
 
-        
+				<li>
+					<a href="">Blog</a>
+				</li>
 
-        <div class="sidebar-gallery w-full">
-            <span class="mtext-101 cl5">
-                About Us
-            </span>
+				<li>
+					<a href="">About</a>
+				</li>
 
-            <p class="stext-108 cl6 p-t-27">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur maximus vulputate hendrerit. Praesent faucibus erat vitae rutrum gravida. Vestibulum tempus mi enim, in molestie sem fermentum quis. 
-            </p>
-        </div>
-    </div>
-</div>
-</aside>
+				<li>
+					<a href="">Contact</a>
+				</li>
+			</ul>
+		</div>
 
+		<!-- Modal Search -->
+		<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
+			<div class="container-search-header">
+				<button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
+					<img src="images/icons/icon-close2.png" alt="CLOSE">
+				</button>
 
-<!-- Cart -->
-<div class="wrap-header-cart js-panel-cart">
-<div class="s-full js-hide-cart"></div>
+				<form class="wrap-search-header flex-w p-l-15">
+					<button class="flex-c-m trans-04">
+						<i class="zmdi zmdi-search"></i>
+					</button>
+					<input class="plh3" type="text" name="search" placeholder="Search...">
+				</form>
+			</div>
+		</div>
+	</header>
 
-<div class="header-cart flex-col-l p-l-65 p-r-25">
-    <div class="header-cart-title flex-w flex-sb-m p-b-8">
-        <span class="mtext-103 cl2">
-            Your Cart
-        </span>
+	<!-- Cart -->
+	<div class="wrap-header-cart js-panel-cart">
+		<div class="s-full js-hide-cart"></div>
 
-        <div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-cart">
-            <i class="zmdi zmdi-close"></i>
-        </div>
-    </div>
-    
-    <div class="header-cart-content flex-w js-pscroll">
-        <ul class="header-cart-wrapitem w-full">
-            <li class="header-cart-item flex-w flex-t m-b-12">
-                <div class="header-cart-item-img">
-                    <img src="/static/userAssets/images/item-cart-01.jpg" alt="IMG">
-                </div>
+		<div class="header-cart flex-col-l p-l-65 p-r-25">
+			<div class="header-cart-title flex-w flex-sb-m p-b-8">
+				<span class="mtext-103 cl2">
+					Your Cart
+				</span>
 
-                <div class="header-cart-item-txt p-t-8">
-                    <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                        White Shirt Pleat
-                    </a>
+				<div class="fs-35 lh-10 cl2 p-lr-5 pointer hov-cl1 trans-04 js-hide-cart">
+					<i class="zmdi zmdi-close"></i>
+				</div>
+			</div>
+			
+			<div class="header-cart-content flex-w js-pscroll">
+				<ul class="header-cart-wrapitem w-full">
+					<li class="header-cart-item flex-w flex-t m-b-12">
+						<div class="header-cart-item-img">
+							<img src="images/item-cart-01.jpg" alt="IMG">
+						</div>
 
-                    <span class="header-cart-item-info">
-                        1 x $19.00
-                    </span>
-                </div>
-            </li>
+						<div class="header-cart-item-txt p-t-8">
+							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+								White Shirt Pleat
+							</a>
 
-            <li class="header-cart-item flex-w flex-t m-b-12">
-                <div class="header-cart-item-img">
-                    <img src="/static/userAssets/images/item-cart-02.jpg" alt="IMG">
-                </div>
+							<span class="header-cart-item-info">
+								1 x $19.00
+							</span>
+						</div>
+					</li>
 
-                <div class="header-cart-item-txt p-t-8">
-                    <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                        Converse All Star
-                    </a>
+					<li class="header-cart-item flex-w flex-t m-b-12">
+						<div class="header-cart-item-img">
+							<img src="images/item-cart-02.jpg" alt="IMG">
+						</div>
 
-                    <span class="header-cart-item-info">
-                        1 x $39.00
-                    </span>
-                </div>
-            </li>
+						<div class="header-cart-item-txt p-t-8">
+							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+								Converse All Star
+							</a>
 
-            <li class="header-cart-item flex-w flex-t m-b-12">
-                <div class="header-cart-item-img">
-                    <img src="/static/userAssets/images/item-cart-03.jpg" alt="IMG">
-                </div>
+							<span class="header-cart-item-info">
+								1 x $39.00
+							</span>
+						</div>
+					</li>
 
-                <div class="header-cart-item-txt p-t-8">
-                    <a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-                        Nixon Porter Leather
-                    </a>
+					<li class="header-cart-item flex-w flex-t m-b-12">
+						<div class="header-cart-item-img">
+							<img src="images/item-cart-03.jpg" alt="IMG">
+						</div>
 
-                    <span class="header-cart-item-info">
-                        1 x $17.00
-                    </span>
-                </div>
-            </li>
-        </ul>
-        
-        <div class="w-full">
-            <div class="header-cart-total w-full p-tb-40">
-                Total: $75.00
-            </div>
+						<div class="header-cart-item-txt p-t-8">
+							<a href="#" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+								Nixon Porter Leather
+							</a>
 
-            <div class="header-cart-buttons flex-w w-full">
-                <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
-                    View Cart
-                </a>
+							<span class="header-cart-item-info">
+								1 x $17.00
+							</span>
+						</div>
+					</li>
+				</ul>
+				
+				<div class="w-full">
+					<div class="header-cart-total w-full p-tb-40">
+						Total: $75.00
+					</div>
 
-                <a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
-                    Check Out
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
+					<div class="header-cart-buttons flex-w w-full">
+						<a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-r-8 m-b-10">
+							View Cart
+						</a>
+
+						<a href="shoping-cart.html" class="flex-c-m stext-101 cl0 size-107 bg3 bor2 hov-btn3 p-lr-15 trans-04 m-b-10">
+							Check Out
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
