--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -38,6 +38,9 @@
 
 
 
+
+
+
 </head>
 <body class="animsition">
 	
@@ -71,8 +74,8 @@
 				<nav class="limiter-menu-desktop container">
 					
 					<!-- Logo desktop -->		
-					<a href="#" class="logo">
-						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
+					<a href="/" class="logo">
+						<img style="scale: 2;" src="/static/userAssets/images/icons/logo black inter.png" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
@@ -127,7 +130,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<div class="logo-mobile">
-				<a href="index.html"><img src="images/icons/logo-01.png" alt="IMG-LOGO"></a>
+				<a href="/"><img src="/static/userAssets/images/icons/logo black inter.png" alt="IMG-LOGO"></a>
 			</div>
 
 			<!-- Icon header -->
