user side all validation like registration and login side completed

--- a/views/admin/addProducts.ejs
+++ b/views/admin/addProducts.ejs
@@ -198,7 +198,7 @@
         }
   
         if (!isValid) {
-          event.preventDefault(); // Prevent form submission if there are errors
+          event.preventDefault(); 
         }
       });
     });
