--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -36,8 +36,8 @@
 				<nav class="limiter-menu-desktop container">
 					
 					<!-- Logo desktop -->		
-					<a href="#" class="logo">
-						<img src="images/icons/logo-01.png" alt="IMG-LOGO">
+					<a href="/" class="logo">
+						<img style="scale: 2;" src="/static/userAssets/images/icons/logo black inter.png" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
